# MemoryKV

./: .gitignore  Cargo.toml  README.md
.github/: release-drafter.yml
.github/workflows/: clang-tidy.yaml  enforce_label.yaml  lint.yaml  test.yaml
sdks/c/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  compile_flags.txt  example.c  main.c
sdks/c/libMemoryKV/: CMakeLists.txt  libMemoryKV.c  libMemoryKV.h
src/: actions.rs  configuration.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  metrics.rs  routes.rs  states.rs  wal.rs
systemd/: memory_kv.service
