[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http2", "ws", "tracing"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
hyper = { version = "1.3", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1.37", features = [
    "signal",
    "tracing",
    "time",
    "sync",
    "macros",
    "net",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-tungstenite = "0.21"
tower = { version = "0.4", features = [
    "util",
    "timeout",
    "load-shed",
    "filter",
    "limit",
] }
tower-http = { version = "0.5", features = [
    "cors",
    "timeout",
    "trace",
    "add-extension",
    "auth",
    "compression-full",
    "limit",
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
envy = "0.4"
bytes = "1.5"
thiserror = "1.0"
parking_lot = "0.12"
headers = "0.4"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
